--- a/presentation.html
+++ b/presentation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Swiss Fertility and Socioeconomic Indicators Data (1888) Exploration</title>
+  <title>Fertility Data Exploration</title>
 
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,7 +20,7 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'Swiss Fertility and Socioeconomic Indicators Data (1888) Exploration',
+                title: 'Fertility Data Exploration',
                         useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -30,7 +30,7 @@
       // Author information
       presenters: [
             {
-        name:  'Amber Wang' ,
+        name:  'Maria Barelkowska' ,
         company: '',
         gplus: '',
         twitter: '',
@@ -93,7 +93,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">3/7/2018</p>
+            <p style="margin-top: 6px; margin-left: -2px;"> </p>
           </hgroup>
   </slide>
 
@@ -103,8 +103,8 @@
 
 <ol>
 <li>The Swiss Fertility and Socioeconomic Indicators Data (swiss data) can be accessed with <strong>data(swiss)</strong> in R</li>
-<li>The GitHub repository containing the R codes required to build the Shiny App (<strong>server.R</strong> and <strong>ui.R</strong>)can be accessed <a href='https://github.com/wamber-aww/data-products' title=''>here</a></li>
-<li>The Shiny app can be accessed <a href='https://wamber.shinyapps.io/swissdata/' title=''>here</a>, which contains</li>
+<li>The GitHub repository containing the R codes required to build the Shiny App (<strong>server.R</strong> and <strong>ui.R</strong>)can be accessed <a href='https://github.com/barelkowskam/datasciencecoursera' title=''>here</a></li>
+<li>The Shiny app can be accessed <a href='https://github.com/barelkowskam/datasciencecoursera' title=''>here</a>, which contains</li>
 </ol>
 
 <ul>
