--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@ Your webpage must contain the date that you created the document, and it must co
 <p>Hover to the spots and link to the website of these fun attraction sites!</p>
 <div id="htmlwidget-a6bd1164c33602de70e1" style="width:672px;height:480px;" class="leaflet html-widget"></div>
 <script type="application/json" data-for="htmlwidget-a6bd1164c33602de70e1">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["//{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"maxNativeZoom":null,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"continuousWorld":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":null,"unloadInvisibleTiles":null,"updateWhenIdle":null,"detectRetina":false,"reuseTiles":false,"attribution":"&copy; <a href=\"http://openstreetmap.org\">OpenStreetMap<\/a> contributors, <a href=\"http://creativecommons.org/licenses/by-sa/2.0/\">CC-BY-SA<\/a>"}]},{"method":"addMarkers","args":[[28.417839,40.689249,37.819929,38.733081,37.865101],[-81.581235,-74.0445,-122.478255,-109.592514,-119.538329],null,null,null,{"clickable":true,"draggable":false,"keyboard":true,"title":"","alt":"","zIndexOffset":0,"opacity":1,"riseOnHover":false,"riseOffset":250},["<a href='https://disneyworld.disney.go.com/'>Disney World<\/a>","<a href='https://www.nps.gov/stli/index.htm'>Statue of Liberty<\/a>","<a href='http://www.goldengatebridge.org/'>Golden Gate Bridge<\/a>","<a href='https://www.nps.gov/arch/index.htm'>Arches National Park<\/a>","<a href='https://www.nps.gov/yose/index.htm'>Yosemite National Park<\/a>"],null,null,null,null,null,null]}],"limits":{"lat":[28.417839,40.689249],"lng":[-122.478255,-74.0445]}},"evals":[],"jsHooks":[]}</script>
+<h2>Publisher Data</h2>
+<p>Author: Maria Barelkowska</p>
+<p>27 May 2024</p>
 </div>
 
 
